Changed the image format

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				<a href="#"> Download CV <span class="fa ml-2 fa-download"></span> </a>	
 			</div>
 			<div class="col-lg-4 col-md-6 my-lg-0 my-5">
-				<img src="images/img.jpg" alt="" class="img-fluid" />
+				<!-- <img src="images/img.webp" alt="" class="img-fluid" /> -->
 			</div>
 			<div class="col-lg-4 bar-grids">
 				<div class="wthree_skills">
@@ -294,18 +294,18 @@
 		<div class="row gallery_grid-more project-grids w3ls">
 		   <div class="col-md-3 p-0 pr-2 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
 			  <div class="w3_agile_gallery_effect">
-				 <a href="images/twitter.jpeg" data-lightbox="example-set" data-title="Twitter-Clone showcasing responsive webdesigning skills">
+				 <a href="images/twitter.webp" data-lightbox="example-set" data-title="Twitter-Clone showcasing responsive webdesigning skills">
 					<figure>
-					   <img src="images/twitter.jpeg" alt=" " class="img-responsive" />
+					   <img src="images/twitter.webp" alt=" " class="img-responsive" />
 					</figure>
 				 </a>
 			  </div>
 		   </div>
 		   <div class="col-md-3 p-0 pr-2 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
 			  <div class="w3_agile_gallery_effect">
-				 <a href="images/discord.jpeg" data-lightbox="example-set" data-title="Discord clone using HTML and CSS">
+				 <a href="images/discord.webp" data-lightbox="example-set" data-title="Discord clone using HTML and CSS">
 					<figure>
-					   <img src="images/discord.jpeg" alt=" " class="img-responsive" />
+					   <img src="images/discord.webp" alt=" " class="img-responsive" />
 					</figure>
 				 </a>
 			  </div>
@@ -313,9 +313,9 @@
 		   </div>
 		   <div class="col-md-6 p-0 col-sm-6 col-12 pt-sm-0 pt-2 agileits_w3layouts_gallery_grid1 hover14 column">
 			  <div class="w3_agile_gallery_effect">
-				 <a href="images/youtube.jpeg" data-lightbox="example-set" data-title="Youtube clone with HTML and CSS">
+				 <a href="images/youtube.webp" data-lightbox="example-set" data-title="Youtube clone with HTML and CSS">
 					<figure>
-					   <img src="images/youtube.jpeg" alt=" " class="img-responsive" />
+					   <img src="images/youtube.webp" alt=" " class="img-responsive" />
 					</figure>
 				 </a>
 			  </div>
@@ -366,7 +366,7 @@
 					<div id="owl-demo" class="owl-carousel">
 						 <div class="item-owl">
 							<div class="test-image">
-								<img src="images/test1.jpg" alt=" " class="img-fluid">
+								<img src="images/test1.webp" alt=" " class="img-fluid">
 							</div>
 							<div class="test-review">
 							  <h5>David Goggins</h5>
@@ -376,7 +376,7 @@
 						</div>
 						<div class="item-owl">
 							<div class="test-image">
-								<img src="images/test1.jpg" alt=" " class="img-fluid">
+								<img src="images/test1.webp" alt=" " class="img-fluid">
 							</div>
 							<div class="test-review">
 								 <h5>Jocko Willink</h5>
@@ -386,7 +386,7 @@
 						</div>
 						 <div class="item-owl">
 							<div class="test-image">
-								<img src="images/test1.jpg" alt=" " class="img-fluid">
+								<img src="images/test1.webp" alt=" " class="img-fluid">
 							</div>
 							<div class="test-review">
 								 <h5>Andrew Carnegie  </h5>
