--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 				</p>
 				<a href="#"> Download CV <span class="fa ml-2 fa-download"></span> </a>	
 			</div>
-			<div class="col-lg-4 col-md-6 my-lg-0 my-5">
-				<!-- <img src="images/img.webp" alt="" class="img-fluid" /> -->
-			</div>
+			<!-- <div class="col-lg-4 col-md-6 my-lg-0 my-5">
+				<img src="images/img.webp" alt="" class="img-fluid" />
+			</div> -->
 			<div class="col-lg-4 bar-grids">
 				<div class="wthree_skills">
 					<h6>Work Ethic<span> 100% </span></h6>
