--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 			  <div class="w3_agile_gallery_effect">
 				 <a href="images/twitter.webp" data-lightbox="example-set" data-title="Twitter-Clone showcasing responsive webdesigning skills">
 					<figure>
-					   <img src="images/twitter.webp" alt=" " class="img-responsive" />
+					   <img src="images/twitter.webp" alt="twitter" class="img-responsive" />
 					</figure>
 				 </a>
 			  </div>
@@ -305,7 +305,7 @@
 			  <div class="w3_agile_gallery_effect">
 				 <a href="images/discord.webp" data-lightbox="example-set" data-title="Discord clone using HTML and CSS">
 					<figure>
-					   <img src="images/discord.webp" alt=" " class="img-responsive" />
+					   <img src="images/discord.webp" alt="discord" class="img-responsive" />
 					</figure>
 				 </a>
 			  </div>
@@ -315,7 +315,7 @@
 			  <div class="w3_agile_gallery_effect">
 				 <a href="images/youtube.webp" data-lightbox="example-set" data-title="Youtube clone with HTML and CSS">
 					<figure>
-					   <img src="images/youtube.webp" alt=" " class="img-responsive" />
+					   <img src="images/youtube.webp" alt="youtube" class="img-responsive" />
 					</figure>
 				 </a>
 			  </div>
@@ -366,7 +366,7 @@
 					<div id="owl-demo" class="owl-carousel">
 						 <div class="item-owl">
 							<div class="test-image">
-								<img src="images/test1.webp" alt=" " class="img-fluid">
+								<img src="images/test1.webp"  class="img-fluid">
 							</div>
 							<div class="test-review">
 							  <h5>David Goggins</h5>
@@ -376,7 +376,7 @@
 						</div>
 						<div class="item-owl">
 							<div class="test-image">
-								<img src="images/test1.webp" alt=" " class="img-fluid">
+								<img src="images/test1.webp"  class="img-fluid">
 							</div>
 							<div class="test-review">
 								 <h5>Jocko Willink</h5>
@@ -386,7 +386,7 @@
 						</div>
 						 <div class="item-owl">
 							<div class="test-image">
-								<img src="images/test1.webp" alt=" " class="img-fluid">
+								<img src="images/test1.webp"  class="img-fluid">
 							</div>
 							<div class="test-review">
 								 <h5>Andrew Carnegie  </h5>
